add modified github

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,5 +1,7 @@
 <h1>GITHUB</h1>
 <img src="./assets/github.jpg" text-align="center">
+<p>{{github.avatar_url}}</p>
+<p>{{github.repos_url}}</p>
 <input name="title" #searchTerm>
  <button class="btn btn-outline-success m-3"(click)="performSearch(searchTerm)">Search Projects</button>
 
