--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -2,7 +2,7 @@
 <img src="./assets/github.jpg" text-align="center">
 <img src='{{github.avatar_url}}'>
 <p>{{github.login}}</p>
-<input name="title" #searchTerm>
- <button class="btn btn-outline-success m-3"(click)="performSearch(searchTerm)">Search Projects</button>
+<!-- <input name="title" #searchTerm>
+ <button class="btn btn-outline-success m-3"(click)="performSearch(searchTerm)">Search Projects</button> -->
 
     <app-github-form></app-github-form>
